samples/_failures_safe/1761149833_fcc9b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_247b9d72.c: In function ‘main’:
./samples/SAFE/__tmp_247b9d72.c:161:12: error: expected identifier or ‘(’ at end of input
  161 |     struct CompressionContext
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_247b9d72.c:161:12: error: expected declaration or statement at end of input
